--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rit-sse-mycroft/app-barcodes"
+    "url": "https://github.com/rit-sse-mycroft/app-barcodes.git"
   },
   "author": "Society of Software Engineers",
   "license": "BSD",
-  "dependencies": {
-    "uuid": "~1.4.1",
-    "winston": "~0.7.2"
+  "bugs": {
+    "url": "https://github.com/rit-sse-mycroft/app-barcodes/issues"
   },
+  "homepage": "https://github.com/rit-sse-mycroft/app-barcodes",
+  "dependencies": {},
   "devDependencies": {
     "mocha": "~1.17.1"
   }
