--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/rit-sse-mycroft/app-barcodes/issues"
   },
   "homepage": "https://github.com/rit-sse-mycroft/app-barcodes",
-  "dependencies": {},
+  "dependencies": {
+    "mycroft": "0.0.0"
+  },
   "devDependencies": {
     "mocha": "~1.17.1"
   }
